# meve

./: .gitignore  README.md  api_access.py  astar.py  authentication.py  cli.py  delayed.py  doctrine.py  doctrine_skills.py  graph_crawler.py  hxxp.py  industry.py  market.py  planetary_industry.py  purchase_planner.py  purchase_tour.py  pyproject.toml  requirements.txt  rig_trade.py  saved_accumulator.py  scratch.py  scratch1.py  sheets.py  skillplan.py  threats.py  timer.py  tracked_map.py  trading.py  types.json  universe.py  update.py  user_data.py  util.py  watcher.py  weighted_series.py
