[project]
name = "meve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow>=1.3.0",
    "click>=8.1.8",
    "cytoolz>=1.0.1",
    "diskcache>=5.6.3",
    "formal-vector",
    "google-api-python-client>=2.160.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.4",
    "networkx>=3.4.2",
    "requests>=2.32.3",
    "xmltodict>=0.14.2",
]

[tool.uv.sources]
formal-vector = { git = "https://github.com/medthehatta/formal-vector" }
